--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "fastapi==0.116.1",
-    "newrelic==10.15.0",
-    "uvicorn==0.36.0",
-    "uvloop==0.21.0"
+    "fastapi",
+    "newrelic",
+    "uvicorn>0.35.0",
+    "uvloop"
 ]
